tests/ui/nll/issue-57362-1.stderr
error[E0599]: no method named `f` found for fn pointer `fn(&u8)` in the current scope
  --> $DIR/issue-57362-1.rs:20:7
   |
LL |     a.f();
   |       ^ method not found in `fn(&u8)`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `Trait` defines an item `f`, perhaps you need to implement it
  --> $DIR/issue-57362-1.rs:8:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
